--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "start:db": "json-server -w db.json",
-    "start:parcel": "parcel index.html"
+    "start:parcel": "parcel index.html",
+    "dev": "concurrently \"npm run start:parcel\"  \"npm run start:db\" "
   }
 }
